query data and show on chrome.